@@ -5,6 +5,11 @@ import array
 
 class RInstanceTestCase(unittest.TestCase):
 
+
+    def tearDow(self):
+        robjects.r._dotter = False
+
+
     def testGetItem(self):
         letters_R = robjects.r["letters"]
         self.assertTrue(isinstance(letters_R, robjects.RVector))
@@ -22,6 +27,12 @@ class RInstanceTestCase(unittest.TestCase):
         for i, li in enumerate(myList):
             self.assertEquals(i, myList[i][0])
 
+
+    def testGetAttr(self):
+        robjects.r._dotter = True
+        self.assertRaises(LookupError, robjects.r.__getitem__, 'as_null')
+        res = robjects.r.as_null
+        self.assertTrue(isinstance(res, rinterface.SexpClosure))
 
     def testEval(self):
         # vector long enough to span across more than one line
